# quantfin

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt
quantfin/: __init__.py  __main__.py  cli.py  config.py
quantfin/data/: cache.py  fetcher.py  universe.py
quantfin/factors/: engine.py  liquidity.py  momentum.py  quality.py  value.py  volatility.py
quantfin/notify/: formatter.py  pushplus.py  wxpusher.py
quantfin/signals/: buy.py  holding.py  ranking.py  sell.py
quantfin/utils/: __init__.py
quantfin/valuation/: individual.py  market_wide.py  timing.py
tests/: conftest.py  test_cache.py  test_factors.py  test_integration.py  test_signals.py  test_valuation.py
